--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <a href="https://github.com/Tushxrb/" target="_blank"><i class="fa-brands fa-square-github"></i></a>
                         <a href="https://www.linkedin.com/in/tushar-banjan-2846731b5/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="images/Resume.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
